--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-useragent": "^1.0.12",
+    "geoip-lite": "^1.3.7",
     "joi": "^14.3.1",
     "mongoose": "^5.5.14",
     "react": "^16.8.6",
